# RecSys-RL

./: .gitignore  LICENSE.md  README.md
eda/: buys_vs_clicks.html  eda_autoviz_sweetviz.ipynb  pyproject.toml
q-learning/: train.ipynb
