[project]
name = "eda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.13"
dependencies = [
    "dataprep>=0.4.5",
    "fastparquet>=2024.11.0",
    "gym>=0.26.2",
    "ipywidgets>=7.8.5",
    "jupyter>=1.1.1",
    "modin[all]>=0.22.3",
    "notebook>=7.3.2",
]
